2008-07-25  Lloyd Bryant ("Sanga")	<lloyd_bryant@netzero.net>

	* Added feature to remember window locations from one 
	  session to the next (patch from TMW by ElvenProgrammer)

2008-07-24  Lloyd Bryant ("Sanga")  <lloyd_bryant@netzero.net>

	* Tweak in net/beinghandler.cpp to compensate for a visual
	  bug when using the TMW server.

2008-07-23  Lloyd Bryant ("Sanga")	<lloyd_bryant@netzero.net>

	* Added support for capes/misc1/misc2 into the character
	  selection display

2008-07-23  Lloyd Bryant ("Sanga")  <lloyd_bryant@netzero.net>

	* Added "chat" button to open/close chat window
	* Added support for viewable cape/misc1/misc2 (new eAthena
	  version ONLY

2008-07-22  Lloyd Bryant ("Sanga")  <lloyd_bryant@netzero.net>

	* Added handler for 0x0086 movement packet (new eAthena).
	* Changed startup sequence for game.cpp to send a ping packet
	  to the server after all the handlers have been initialized.
	  This is required by the new eAthena version.
	* Added #deines for some "ping" packets.

2008-07-19  Lloyd Bryant ("Sanga")  <lloyd_bryant@netzero.net>

	* Removed unnecessary check ("weight") from itemdb loader

2008-07-18  Lloyd Bryant ("Sanga")  <lloyd_bryant@netzero.net>

	* Added code to provide viewable glove and shoe sprites

2008-07-11  Douglas Boffey  <DougABoffey@netscape.net>

	* Added code to avoid collision between different displayed text.

2008-07-08  Lloyd Bryant ("Sanga")	<lloyd_bryant@netzero.net>

	* Added handling for a "Stop Walking" packet.  This will
	  force the client back into sync during those "can't run
	  away from a battle" sync error conditions.

2008-07-07  Lloyd Bryant ("Sanga")	<lloyd_bryant@netzero.net>

	* Added support for update host provided by login server
	* Changed startup sequence to login first, then update

2008-07-05  Lloyd Bryant ("Sanga")  <lloyd_bryant@netzero.net>

	* Applied patch from kraant to convert into a TME branded client
	* Removed redundant autoconf files
